add @tags annotation
